feat: update Nutri Points contract to v17
